src/fastcampus/kubenetes/Part3/ch05_last_mission/appChart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: delivery
  labels:
    project: snackbar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delivery-app
  template:
    metadata:
      name: delivery
      namespace: delivery
      labels:
        app: delivery-app
        tag: 5.0.1
        project: snackbar
    spec:
      containers:
        - name: delivery-web
          image: dlgustn555/delivery:5.0.1
          ports:
            - containerPort: 8080
          resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: payment
  labels:
    project: snackbar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      name: payment-app
      namespace: payment
      labels:
        app: payment-app
        tag: 5.0.1
        project: snackbar
    spec:
      containers:
        - name: payment-web
          image: dlgustn555/payment:5.0.1
          ports:
            - containerPort: 8080
          resources: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v2
  namespace: order
  labels:
    project: snackbar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      name: order
      namespace: order
      labels:
        app: order-app
        tag: 5.0.6
        project: snackbar
    spec:
      containers:
        - name: order-web
          image: dlgustn555/order:5.0.6
          ports:
            - containerPort: 8080
          resources: {}
