src/fastcampus/kubenetes/Part3/ch05_last_mission/appChart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: order
  labels:
    project: snackbar
spec:
  defaultBackend:
    service:
      name: order
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /order
            backend:
              service:
                name: order
                port:
                  number: 80
